<resources>
    <string name="app_name">StingaLtd</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_login">Incorrect login information</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_network_connection">Network error</string>
    <string name="error_unknown">Unknown error</string>
    <string name="btn_pre_img">Add Pre Images</string>
    <string name="btn_post_img">Add Post Images</string>
    <string name="technician_note">Technician Notes</string>
    <string name="submit">Submit</string>
    <string name="verify_job_is_complete">Select to verify that task is complete</string>
    <string name="exit_app">Are you sure you want to logout?</string>
    <string name="remove_photo">Are you sure you want to delete this photo?</string>
    <string name="default_latitude">18.4974984</string>
    <string name="default_longitude">-77.9171445</string>

    <string name="application_id">com.stingaltd.stingaltd</string>
    <string name="file_provider">com.stingaltd.stingaltd</string>
    <string name="camera_failed">Camera task failed</string>
    <string name="photo_error_local_folder">Error Saving Photo to Local Directory</string>
    <string name="work_item">Work Item #:</string>
    <string name="preference_email">com.stingaltd.stingaltd.EMAIL</string>
    <string name="preference_email_key">com.stingaltd.stingaltd.EMAIL_KEY</string>
    <string name="preference_id">com.stingaltd.stingaltd.ID</string>
    <string name="preference_id_key">com.stingaltd.stingaltd.ID_KEY</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="inventory_quantity">Available:</string>
    <string name="inventory_used">Amount Used:</string>
    <string name="inventory">Inventory</string>
    <string name="expense">Expenses</string>
    <string name="job_item">Job Item</string>
    <string name="job_list">Your Job Task</string>
    <string name="no_record">No record found!!!</string>
    <string name="save">Save</string>
    <string name="job_complete">Complete</string>

    <!-- SyncAdapter related -->
    <string translatable="false" name="sync_account_type">com.stingaltd.stingaltd</string>
    <string translatable="false" name="content_authority">com.stingaltd.stingaltd.data</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="missing_job_phot">You are required to add all photos</string>
    <string name="job_status_updated">Job status updated</string>
    <string name="form_submitted">Form submitted</string>
    <string name="action_update">Update App</string>
    <string name="rod_reading">Rod Readings</string>
    <string name="are_you_sure">Are you sure you want to submit this data</string>
</resources>
