<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:layout_marginLeft="@dimen/recycle_view_margin"
    android:layout_marginRight="@dimen/recycle_view_margin"
    android:layout_marginBottom="12dp"
    android:id="@+id/holder"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp"
    app:cardMaxElevation="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="#ffffff"
        android:id="@+id/job_list">

        <TextView
            android:id="@+id/job_type"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View style="@style/Divider"
            android:id="@+id/divider"
            android:layout_below="@id/job_type"/>

        <TextView
            android:id="@+id/job_id"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider"/>

        <TextView
            android:id="@+id/assign_date"
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/divider"/>

        <TextView
            android:id="@+id/job_item"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/job_id"/>

        <View style="@style/line"
            android:id="@+id/line"
            android:layout_below="@id/job_item"/>

        <TextView
            android:id="@+id/customer"
            android:layout_marginBottom="5dp"
            android:text="@string/error_unknown"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/line"/>

        <Button
            android:id="@+id/send_email"
            android:text="@string/email"
            style="@style/TaskBtnStyle"
            android:drawableStart="@drawable/baseline_email_black_36"
            android:visibility="gone"
            android:layout_below="@id/customer"/>

        <Button
            android:id="@+id/make_call"
            android:text="@string/phone"
            style="@style/TaskBtnStyle"
            android:drawableStart="@drawable/baseline_phone_in_talk_black_36"
            android:visibility="gone"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/customer"/>
    </RelativeLayout>
</android.support.v7.widget.CardView>


